@@ -21,6 +21,7 @@ Date: ????
     - Connect the inputs of the normal & active combinators so the wires highlight
     - Support mining the combinator whilst active is active
     - Fix gui not opening anymore
+    - Make the undo queue respect mining an active combinator
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 04
